More on Dashboard Translations

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Вашата автоматично генерирана парола е: ",
   "available_balance": "Наличен баланс",
   "available_for_transfer": "__qty__ наличен за прехвърляне",
+  "available_supply": "Налично снабдяване",
   "avg_amount_per_block": "Средна сума на блок",
   "avg_fee_per_block": "Средна такса на блок",
   "back": "обратно",
@@ -517,6 +518,7 @@
   "logout": "Изход",
   "logout_stop_forging": "Изход и спиране на коването",
   "lowest_ask": "Най-ниска продава",
+  "market_capitalization": "Пазарна капитализация",
   "market_delivery": "Доставка",
   "market_feedback": "Отзив от пазара",
   "market_info": "Информация за пазара",
@@ -524,6 +526,7 @@
   "market_price_change": "Промяна цена",
   "market_purchase": "Покупка",
   "market_quantity_change": "Промяна кол-во",
+  "market_rank": "Пазарен ранг",
   "market_refund": "Връщане",
   "market_removal": "Отписване",
   "marketplace": "Пазар",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Хеш на предишния блок",
   "previous_page": "Предишна страница",
   "price": "Price",
+  "price_chart_7d": "График на цената 7 дни",
   "priority_fee": "приоритет",
   "private_feedback": "Собствена обратна връзка",
   "processors": "Процесори",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Данни за необработена сделка",
   "recent_blocks": "Последни блока",
   "recent_transactions": "Последни сделки",
+  "recent_transactions_since": "Последните сделки оттогава",
   "recipient": "Получател",
   "recipient_account": "Сметка на получателя",
   "recipient_alias_suggestion": "Ако искате да въведедете псевдоним, добавете знака @ като представка.",
@@ -931,6 +936,7 @@
   "version": "Версия",
   "view_more": "Виж още",
   "view_owner_info_q": "Показване информация за собственик?",
+  "volume_24h": "Обем 24ч",
   "vote": "Гласуване",
   "vote_casting": "Гласоподаване",
   "vote_x": "гласуване __x__",
@@ -943,6 +949,7 @@
   "with_burst": "With BURST",
   "x_confirmations": "__x__ потвърждения",
   "yes": "Да",
+  "yesterdays_change": "Промяна вчера",
   "you": "Вие",
   "you_received_assets": "Получихте един __name__ актив.",
   "you_received_assets_plural": "Вие получихте __count__ __name__ активи.",
