--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "La seva contrasenya generada automàticament és: ",
   "available_balance": "Saldo disponible",
   "available_for_transfer": "__qty__ disponibles per a la transferència",
+  "available_supply": "Subministrament disponible",
   "avg_amount_per_block": "Quantitat Mitjana per Bloc",
   "avg_fee_per_block": "Despesa Mitjana per Bloc",
   "back": "esquena",
@@ -517,6 +518,7 @@
   "logout": "Finalitzar la sessió",
   "logout_stop_forging": "Desconnectar i aturar la Forja",
   "lowest_ask": "Oferta més baixa",
+  "market_capitalization": "Capitalizació del mercat",
   "market_delivery": "Lliurament del Mercat",
   "market_feedback": "Comentaris del Mercat",
   "market_info": "Informació del mercat",
@@ -524,6 +526,7 @@
   "market_price_change": "Canvi de Preu del Mercat",
   "market_purchase": "Compra del Mercat",
   "market_quantity_change": "Canvi de Quantitat del Mercat",
+  "market_rank": "Rang del mercat",
   "market_refund": "Reemborsament del Mercat",
   "market_removal": "Retirada del Mercat",
   "marketplace": "Mercat",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash del Bloc previ",
   "previous_page": "Pàgina anterior",
   "price": "Price",
+  "price_chart_7d": "Gràfic de preus 7 dies",
   "priority_fee": "Prioritat",
   "private_feedback": "Comentari privat",
   "processors": "Processadors",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Detalls de la transacció sense processar",
   "recent_blocks": "Darrers blocs",
   "recent_transactions": "Transaccions Recents",
+  "recent_transactions_since": "Transaccions recents des de",
   "recipient": "Destinatari",
   "recipient_account": "Compte del Destinatari",
   "recipient_alias_suggestion": "Si voleu escriure un àlies, afegiu @ al principi.",
@@ -931,6 +936,7 @@
   "version": "Versió",
   "view_more": "Veure més",
   "view_owner_info_q": "Veure la informació del propietari?",
+  "volume_24h": "Volum 24h",
   "vote": "Votar",
   "vote_casting": "Emisió de Vots",
   "vote_x": "votar __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Amb burst",
   "x_confirmations": "__x__ confirmacions",
   "yes": "Si",
+  "yesterdays_change": "Canvi d’ahir",
   "you": "Vosté",
   "you_received_assets": "Ha rebut 1 Actiu de __name__ .",
   "you_received_assets_plural": "Ha rebut Actius de __count__ __name__ .",
