--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Automaticky generované heslo je: ",
   "available_balance": "Dostupný zůstatek",
   "available_for_transfer": "__qty__ dostupných pro převod",
+  "available_supply": "Dostupná nabídka",
   "avg_amount_per_block": "Průměrná částka na blok",
   "avg_fee_per_block": "Průměrný poplatek za blok",
   "back": "Zadní",
@@ -517,6 +518,7 @@
   "logout": "Odhlásit se",
   "logout_stop_forging": "Odhlášení a ukončení forging",
   "lowest_ask": "Nejnižší poptávka",
+  "market_capitalization": "Tržní kapitalizace",
   "market_delivery": "Dodávka",
   "market_feedback": "Reakce trhu",
   "market_info": "Informace o trhu",
@@ -524,6 +526,7 @@
   "market_price_change": "Změna tržní ceny",
   "market_purchase": "Nákup",
   "market_quantity_change": "Změna množství",
+  "market_rank": "Pozice na trhu",
   "market_refund": "Refundace tržiště",
   "market_removal": "Odstranění",
   "marketplace": "Tržiště",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash předchozího bloku",
   "previous_page": "Předchozí stránka",
   "price": "Price",
+  "price_chart_7d": "Cenový graf 7 dní",
   "priority_fee": "Přednost",
   "private_feedback": "Soukromá zpětná vazba",
   "processors": "Procesory",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Raw Transaction Details",
   "recent_blocks": "Recent Blocks",
   "recent_transactions": "Poslední transakce",
+  "recent_transactions_since": "Nedávné transakce od roku 2003",
   "recipient": "Příjemce",
   "recipient_account": "Účet příjemce",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
@@ -931,6 +936,7 @@
   "version": "Verze",
   "view_more": "Zobrazit více",
   "view_owner_info_q": "View owner info?",
+  "volume_24h": "Objem 24h",
   "vote": "Hlasovat",
   "vote_casting": "Hlasování",
   "vote_x": "vote __x__",
@@ -943,6 +949,7 @@
   "with_burst": "S burst",
   "x_confirmations": "__x__ confirmations",
   "yes": "Ano",
+  "yesterdays_change": "Včerejší změna",
   "you": "Vy",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
