--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Ihre automatisch generierte Passphrase lautet:",
   "available_balance": "Verfügbares Guthaben",
   "available_for_transfer": "__qty__ zum Übertragen verfügbar",
+  "available_supply": "Verfügbares Angebot",
   "avg_amount_per_block": "Durchschnittlicher Betrag pro Block",
   "avg_fee_per_block": "Durchschnittliche Gebühr pro Block",
   "back": "Zurück",
@@ -517,6 +518,7 @@
   "logout": "Abmelden",
   "logout_stop_forging": "Abmelden und keine weiteren Blöcke generieren",
   "lowest_ask": "Niedrigstes Verkaufangebot",
+  "market_capitalization": "Marktkapitalisierung",
   "market_delivery": "Lieferung",
   "market_feedback": "Feedback",
   "market_info": "Marktinformationen",
@@ -524,6 +526,7 @@
   "market_price_change": "Marktpreisänderung",
   "market_purchase": "Marktplatzkauf",
   "market_quantity_change": "Mengenänderung",
+  "market_rank": "Marktrang",
   "market_refund": "Rückerstattung",
   "market_removal": "Aus dem Angebot nehmen",
   "marketplace": "Marktplatz",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash des vorherigen Blocks",
   "previous_page": "Vorherige Seite",
   "price": "Preis",
+  "price_chart_7d": "Preischart 7 Tage",
   "priority_fee": "Priorität",
   "private_feedback": "Privates Feedback",
   "processors": "Prozessoren",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Alle Details zur Transaktion",
   "recent_blocks": "Letzte Blöcke",
   "recent_transactions": "Letzte Transaktionen",
+  "recent_transactions_since": "Letzte Transaktionen seit",
   "recipient": "Empfänger",
   "recipient_account": "Empfängerkonto",
   "recipient_alias_suggestion": "Wenn Sie einen Alias eingeben möchten, stellen Sie ein @-Zeichen voran.",
@@ -931,6 +936,7 @@
   "version": "Version",
   "view_more": "Mehr anzeigen",
   "view_owner_info_q": "Informationen über den Inhaber anschauen?",
+  "volume_24h": "Volumen 24h",
   "vote": "Stimme",
   "vote_casting": "Wählen",
   "vote_x": "stimme __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Mit BURST",
   "x_confirmations": "__x__ Bestätigungen",
   "yes": "Ja",
+  "yesterdays_change": "Veränderung zu Gestern",
   "you": "Sie",
   "you_received_assets": "Du hast <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a> empfangen.",
   "you_received_assets_plural": "Du hast <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>. empfangen",
