--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Η αυτόματα δημιουργημένη συνθηματική φράση είναι: ",
   "available_balance": "Διαθέσιμο υπόλοιπο",
   "available_for_transfer": "__qty__ διαθέσιμο για μεταφορά",
+  "available_supply": "Διαθέσιμη προμήθεια",
   "avg_amount_per_block": "Μ.ο. ποσού ανά μπλοκ",
   "avg_fee_per_block": "Μ.ο. τέλος ανά μπλοκ",
   "back": "Πίσω",
@@ -517,6 +518,7 @@
   "logout": "Αποσύνδεση",
   "logout_stop_forging": "Αποσύνδεση και λήξη εξόρυξης",
   "lowest_ask": "Χαμηλότερη ζήτηση",
+  "market_capitalization": "Κεφαλαιοποίηση αγοράς",
   "market_delivery": "Παράδοση στην Αγορά",
   "market_feedback": "Market Feedback",
   "market_info": "Πληροφορίες αγοράς",
@@ -524,6 +526,7 @@
   "market_price_change": "Μεταβολή της τιμής αγοράς",
   "market_purchase": "Αγορά αγαθού",
   "market_quantity_change": "Market QTY Change",
+  "market_rank": "Κατάταξη της αγοράς",
   "market_refund": "Επιστροφή από αγορά",
   "market_removal": "Διαγραφή από την αγορά",
   "marketplace": "Αγορά",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Προηγούμενο Hash μπλοκ",
   "previous_page": "Προηγούμενη Σελίδα",
   "price": "Price",
+  "price_chart_7d": "Τιμοκατάλογος 7 ημέρες",
   "priority_fee": "Προτεραιότητα",
   "private_feedback": "Ιδιωτική απάντηση",
   "processors": "Επεξεργαστές",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Raw Transaction Details",
   "recent_blocks": "Recent Blocks",
   "recent_transactions": "Recent Transactions",
+  "recent_transactions_since": "Πρόσφατες συναλλαγές από τότε",
   "recipient": "Παραλήπτης",
   "recipient_account": "Recipient Account",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
@@ -931,6 +936,7 @@
   "version": "Έκδοση",
   "view_more": "Δείτε περισσότερα",
   "view_owner_info_q": "View owner info?",
+  "volume_24h": "Τόμος 24 ώρες",
   "vote": "Ψηφίστε",
   "vote_casting": "Vote Casting",
   "vote_x": "vote __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Με burst",
   "x_confirmations": "__x__ επιβεβαιώσεις",
   "yes": "Ναι",
+  "yesterdays_change": "Αλλαγή χθες",
   "you": "You",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
