--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Your automatically generated passphrase is:",
   "available_balance": "Available Balance",
   "available_for_transfer": "__qty__ available for transfer",
+  "available_supply": "Available Supply",
   "avg_amount_per_block": "Avg. Amount Per Block",
   "avg_fee_per_block": "Avg. Fee Per Block",
   "back": "Back",
@@ -526,6 +527,7 @@
   "logout": "Logout",
   "logout_stop_forging": "Logout and Stop Forging",
   "lowest_ask": "Lowest Ask",
+  "market_capitalization": "Market Capitalization",
   "market_delivery": "Market Delivery",
   "market_feedback": "Market Feedback",
   "market_info": "Market Information",
@@ -533,6 +535,7 @@
   "market_price_change": "Market Price Change",
   "market_purchase": "Market Purchase",
   "market_quantity_change": "Market QTY Change",
+  "market_rank": "Market Rank",
   "market_refund": "Market Refund",
   "market_removal": "Market Removal",
   "marketplace": "Marketplace",
@@ -692,6 +695,7 @@
   "previous_block_hash": "Previous Block Hash",
   "previous_page": "Previous Page",
   "price": "Price",
+  "price_chart_7d": "Price Chart 7 days",
   "priority_fee": "Priority",
   "private_feedback": "Private Feedback",
   "processors": "Processors",
@@ -717,6 +721,7 @@
   "raw_transaction_details": "Raw Transaction Details",
   "recent_blocks": "Recent Blocks",
   "recent_transactions": "Recent Transactions",
+  "recent_transactions_since": "Recent transactions since",
   "recipient": "Recipient",
   "recipient_account": "Recipient Account",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
@@ -941,6 +946,7 @@
   "version": "Version",
   "view_more": "View More",
   "view_owner_info_q": "View owner info?",
+  "volume_24h": "Volume 24h",
   "vote": "Vote",
   "vote_casting": "Vote Casting",
   "vote_x": "vote __x__",
@@ -953,6 +959,7 @@
   "with_burst": "With BURST",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
+  "yesterdays_change": "Yesterday's Change",
   "you": "You",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
