--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Su contraseña generada automáticamente es:",
   "available_balance": "Saldo Disponible",
   "available_for_transfer": "__qty__ disponible para transferir",
+  "available_supply": "Suministro disponible",
   "avg_amount_per_block": "Cantidad Media por Bloque",
   "avg_fee_per_block": "Tarifa Media por Bloque",
   "back": "Espalda",
@@ -517,6 +518,7 @@
   "logout": "Cerrar Sesión",
   "logout_stop_forging": "Cerrar Sesión y Detener la Forja",
   "lowest_ask": "Demanda Más Baja",
+  "market_capitalization": "Capitalización de mercado",
   "market_delivery": "Entrega de Mercado",
   "market_feedback": "Valoraciones del Mercado",
   "market_info": "Información de mercado",
@@ -524,6 +526,7 @@
   "market_price_change": "Variación en el Precio de Mercado",
   "market_purchase": "Compra de Mercado",
   "market_quantity_change": "Cambio de Cant. en Mercado",
+  "market_rank": "Rango de mercado",
   "market_refund": "Reembolso del Mercado",
   "market_removal": "Retirar del Mercado",
   "marketplace": "Mercado",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash del Bloque Anterior",
   "previous_page": "Página Anterior",
   "price": "Precio",
+  "price_chart_7d": "Tabla de precios 7 días",
   "priority_fee": "Prioridad",
   "private_feedback": "Valoraciones Privadas",
   "processors": "Procesadores",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Datos sin procesar de la Transacción",
   "recent_blocks": "Bloques Recientes",
   "recent_transactions": "Transacciones Recientes",
+  "recent_transactions_since": "Transacciones recientes desde",
   "recipient": "Destinatario",
   "recipient_account": "Cuenta de Destino",
   "recipient_alias_suggestion": "Si desea escribir un alias, añada el caracter @ al principio.",
@@ -931,6 +936,7 @@
   "version": "Versión",
   "view_more": "Ver Más",
   "view_owner_info_q": "¿Ver información de propietario?",
+  "volume_24h": "Volumen 24h",
   "vote": "Votar",
   "vote_casting": "Emisión de Votos",
   "vote_x": "votar __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Con BURST",
   "x_confirmations": "__x__ confirmaciones",
   "yes": "Sí",
+  "yesterdays_change": "Cambio de ayer",
   "you": "Usted",
   "you_received_assets": "Has recibido <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "Usted recibió <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
