--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Automaattisesti luotu tunnuslauseesi on:",
   "available_balance": "Käytettävissä oleva saldo",
   "available_for_transfer": "__qty__ siirrettävissä",
+  "available_supply": "Saatavilla",
   "avg_amount_per_block": "Keskim. summa per lohko",
   "avg_fee_per_block": "Keskim. siirtomaksu per lohko",
   "back": "Takaisin",
@@ -517,6 +518,7 @@
   "logout": "Kirjaudu ulos",
   "logout_stop_forging": "Kirjaudu ulos ja lopeta taonta",
   "lowest_ask": "Alin myyntihinta",
+  "market_capitalization": "Markkina-arvo",
   "market_delivery": "Kauppapaikan toimitus",
   "market_feedback": "Palaute kauppapaikassa",
   "market_info": "Markkinatiedot",
@@ -524,6 +526,7 @@
   "market_price_change": "Markkinahinnan muutos",
   "market_purchase": "Osto kauppapaikasta",
   "market_quantity_change": "Kauppapaikan määrän muutos",
+  "market_rank": "Markkina-asema",
   "market_refund": "Kauppapaikan maksun palautus",
   "market_removal": "Poisto kauppapaikasta",
   "marketplace": "Kauppapaikka",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Edellisen lohkon tarkiste",
   "previous_page": "Edellinen sivu",
   "price": "Hinta",
+  "price_chart_7d": "Hintakaavio 7 päivää",
   "priority_fee": "prioriteetti",
   "private_feedback": "Yksityinen palaute",
   "processors": "Käsittelijät",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Transaktion tiedot",
   "recent_blocks": "Viimeiset lohkot",
   "recent_transactions": "Viimeiset tapahtumat",
+  "recent_transactions_since": "Viimeaikaiset tapahtumat vuodesta 2004 lähtien",
   "recipient": "Vastaanottaja",
   "recipient_account": "Vastaanottajan tili",
   "recipient_alias_suggestion": "Jos haluat kirjoittaa aliaksen, laita sen eteen @-merkki.",
@@ -931,6 +936,7 @@
   "version": "Versio",
   "view_more": "Näytä lisää",
   "view_owner_info_q": "Katso omistajan tietoja?",
+  "volume_24h": "Volume 24h",
   "vote": "Äänestys",
   "vote_casting": "Äänestys",
   "vote_x": "ääni __x__",
@@ -943,6 +949,7 @@
   "with_burst": "BURST:n kanssa",
   "x_confirmations": "__x__ vahvistusta",
   "yes": "Kyllä",
+  "yesterdays_change": "Eilinen muutos",
   "you": "Sinä",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
