--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Votre phrase de passe générée automatiquement est :",
   "available_balance": "Solde disponible",
   "available_for_transfer": "__qty__ disponibles pour le transfert",
+  "available_supply": "Offre disponible",
   "avg_amount_per_block": "Volume moyen par bloc",
   "avg_fee_per_block": "Frais moyens par bloc",
   "back": "Retour",
@@ -517,6 +518,7 @@
   "logout": "Se déconnecter",
   "logout_stop_forging": "Quitter et arrêter de forger",
   "lowest_ask": "Offre de vente",
+  "market_capitalization": "Capitalisation boursière",
   "market_delivery": "Livraison sur le marché",
   "market_feedback": "Avis du marché",
   "market_info": "Information du marché",
@@ -524,6 +526,7 @@
   "market_price_change": "Les prix du marché ont évolué",
   "market_purchase": "Achat sur le marché",
   "market_quantity_change": "La qté disponible sur le marché a évolué",
+  "market_rank": "Rang du marché",
   "market_refund": "Remboursement à hauteur du prix du marché",
   "market_removal": "Retrait du marché",
   "marketplace": "Place de marché",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hachage du bloc précédent",
   "previous_page": "Page précédente",
   "price": "Prix",
+  "price_chart_7d": "Tableau des prix 7 jours",
   "priority_fee": "Priorité",
   "private_feedback": "Avis privé",
   "processors": "Processeurs",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Détails de la transaction brute",
   "recent_blocks": "Blocs récents",
   "recent_transactions": "Transactions récentes",
+  "recent_transactions_since": "Transactions récentes depuis",
   "recipient": "Destinataire",
   "recipient_account": "Compte bénéficiaire",
   "recipient_alias_suggestion": "Si vous souhaitez envoyer les BURST par le biais d'un alias, ajoutez un @ avant ce dernier.",
@@ -931,6 +936,7 @@
   "version": "Version",
   "view_more": "Afficher plus",
   "view_owner_info_q": "Voir les informations du propriétaire ?",
+  "volume_24h": "Volume 24h",
   "vote": "Voter",
   "vote_casting": "Vote ouvert",
   "vote_x": "voter pour __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Avec BURST",
   "x_confirmations": "__x__ confirmations",
   "yes": "Oui",
+  "yesterdays_change": "Changement d'hier",
   "you": "Vous",
   "you_received_assets": "Vous avez reçu <a href='#' data-goto-asset='__asset__'>1 actif __name__</a>.",
   "you_received_assets_plural": "Vous avez reçu <a href='#' data-goto-asset='__asset__'>__count__ actifs __name__</a>.",
