--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "O seu contrasinal xerado automáticamente é:",
   "available_balance": "Saldo dispoñible",
   "available_for_transfer": "__qty__ dispoñible para transferir",
+  "available_supply": "Subministración dispoñible",
   "avg_amount_per_block": "Cantidade media por bloque",
   "avg_fee_per_block": "Comisión media por bloque",
   "back": "Volver",
@@ -517,6 +518,7 @@
   "logout": "Pechar sesión",
   "logout_stop_forging": "Pechala sesión e detela forxa",
   "lowest_ask": "Demanda máis baixa",
+  "market_capitalization": "Capitalización de mercados",
   "market_delivery": "Entrega de Mercado",
   "market_feedback": "Valoración do mercado",
   "market_info": "Información de mercado",
@@ -524,6 +526,7 @@
   "market_price_change": "Cambio de prezo de mercado",
   "market_purchase": "Compra de mercado",
   "market_quantity_change": "Cambio de cantidade no mercado",
+  "market_rank": "Rango de mercado",
   "market_refund": "Reembolso de Mercado",
   "market_removal": "Retirar do mercado",
   "marketplace": "Mercado",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash do bloque anterior",
   "previous_page": "Páxina anterior",
   "price": "Prezo",
+  "price_chart_7d": "Gráfico de prezos 7 días",
   "priority_fee": "Prioridade",
   "private_feedback": "Private Feedback",
   "processors": "Procesadores",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Datos sen procesar da transacción",
   "recent_blocks": "Bloques recentes",
   "recent_transactions": "Transaccións recentes",
+  "recent_transactions_since": "Transaccións recentes desde",
   "recipient": "Destinatario",
   "recipient_account": "Conta do destinatario",
   "recipient_alias_suggestion": "Se desexa escribir un Alias, engada o carácter @ ó principio.",
@@ -931,6 +936,7 @@
   "version": "Versión",
   "view_more": "Ver máis",
   "view_owner_info_q": "¿Vela información do propietario?",
+  "volume_24h": "Volume 24 horas",
   "vote": "Votar",
   "vote_casting": "Emisión de votos",
   "vote_x": "votar __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Con BURST",
   "x_confirmations": "__x__ confirmacións",
   "yes": "Sí",
+  "yesterdays_change": "Cambio de onte",
   "you": "Ti",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
