--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "आपका स्वत उत्पन्न passphrase है: ",
   "available_balance": "उपलब्ध शेष राशि",
   "available_for_transfer": "__qty__ हस्तांतरण के लिए उपलब्ध",
+  "available_supply": "उपलब्ध आपूर्ति",
   "avg_amount_per_block": "ब्लॉक प्रति औसत राशि",
   "avg_fee_per_block": "ब्लॉक प्रति औसत शुल्क",
   "back": "वापस",
@@ -517,6 +518,7 @@
   "logout": "लॉग आउट",
   "logout_stop_forging": "लॉगआउट और फोर्जिंग बंद करें",
   "lowest_ask": "सबसे कम बोली",
+  "market_capitalization": "बाजार पूंजीकरण",
   "market_delivery": "Market Delivery",
   "market_feedback": "Market Feedback",
   "market_info": "बाजार की जानकारी",
@@ -524,6 +526,7 @@
   "market_price_change": "Market Price Change",
   "market_purchase": "Market Purchase",
   "market_quantity_change": "Market QTY Change",
+  "market_rank": "बाजार रैंक",
   "market_refund": "Market Refund",
   "market_removal": "Market Removal",
   "marketplace": "बाज़ार",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Previous Block Hash",
   "previous_page": "Previous Page",
   "price": "Price",
+  "price_chart_7d": "मूल्य चार्ट 7 दिन",
   "priority_fee": "प्राथमिकता",
   "private_feedback": "निजी प्रतिक्रिया",
   "processors": "प्रक्रिया करने वाले",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "कच्चे हस्तांतरण विवरण",
   "recent_blocks": "हाल ही में ब्लॉक",
   "recent_transactions": "हाल ही में लेन-देन",
+  "recent_transactions_since": "हाल ही में लेन-देन",
   "recipient": "प्राप्तकर्ता",
   "recipient_account": "प्राप्तकर्ता खाता",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
@@ -931,6 +936,7 @@
   "version": "संस्करण",
   "view_more": "देखें और अधिक",
   "view_owner_info_q": "मालिक जानकारी देखें?",
+  "volume_24h": "मात्रा 24 ह",
   "vote": "वोट",
   "vote_casting": "Vote Casting",
   "vote_x": "vote __x__",
@@ -943,6 +949,7 @@
   "with_burst": "With BURST",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
+  "yesterdays_change": "कल का बदलाव",
   "you": "You",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
