--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Password yang otomatis adalah:",
   "available_balance": "Saldo Yang Tersedia",
   "available_for_transfer": "__qty__ tersedia untuk transfer",
+  "available_supply": "Pasokan yang Tersedia",
   "avg_amount_per_block": "Jumlah rata-rata Per blok",
   "avg_fee_per_block": "Rata-rata biaya Per blok",
   "back": "Kembali",
@@ -517,6 +518,7 @@
   "logout": "Log Keluar",
   "logout_stop_forging": "Logout dan penyusunan berhenti",
   "lowest_ask": "Harga yang diminta terendah",
+  "market_capitalization": "Kapitalisasi pasar",
   "market_delivery": "Pasar pengiriman",
   "market_feedback": "Umpan balik dari pasar",
   "market_info": "Informasi Pasar",
@@ -524,6 +526,7 @@
   "market_price_change": "Perubahan Harga Pasar",
   "market_purchase": "Pembelian pasar",
   "market_quantity_change": "Perubahan pasar Kuantitas",
+  "market_rank": "Peringkat Pasar",
   "market_refund": "Pengembalian pasar",
   "market_removal": "Penghapusan pasar",
   "marketplace": "Pasar",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Sebelumnya Blok Hash",
   "previous_page": "Halaman sebelumnya",
   "price": "Harga",
+  "price_chart_7d": "Grafik Harga 7 hari",
   "priority_fee": "Prioritas",
   "private_feedback": "Umpan balik pribadi",
   "processors": "Prosesor",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Rincian transaksi mentah",
   "recent_blocks": "Hari blok",
   "recent_transactions": "Transaksi terakhir",
+  "recent_transactions_since": "Transaksi terakhir sejak",
   "recipient": "Penerima",
   "recipient_account": "Rekening Penerima",
   "recipient_alias_suggestion": "Jika Anda ingin mengetik alias, tambahkan dengan karakter @.",
@@ -931,6 +936,7 @@
   "version": "Versi",
   "view_more": "Lihat lebih",
   "view_owner_info_q": "Lihat info pemilik?",
+  "volume_24h": "Volume 24jam",
   "vote": "Pemilihan",
   "vote_casting": "Memilih Casting",
   "vote_x": "suara __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Dengan BURST",
   "x_confirmations": "konfirmasi __x__",
   "yes": "Ya",
+  "yesterdays_change": "Perubahan kemarin",
   "you": "Anda",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
