--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "La tua frase generata automaticamente è:",
   "available_balance": "Saldo disponibile",
   "available_for_transfer": "__qty__ disponibile per il trasferimento",
+  "available_supply": "Fornitura disponibile",
   "avg_amount_per_block": "Importo medio Per blocco",
   "avg_fee_per_block": "Commissione media per blocco",
   "back": "Indietro",
@@ -517,6 +518,7 @@
   "logout": "Logout",
   "logout_stop_forging": "Slogga e ferma la forgiatura",
   "lowest_ask": "Domanda più bassa",
+  "market_capitalization": "Capitalizzazione di mercato",
   "market_delivery": "Consegna",
   "market_feedback": "Feedback mercato",
   "market_info": "Informazioni di mercato",
@@ -524,6 +526,7 @@
   "market_price_change": "Cambio del prezzo di mercato",
   "market_purchase": "Acquisto dal mercato",
   "market_quantity_change": "Cambiamento quantità di mercato",
+  "market_rank": "Classifica di mercato",
   "market_refund": "Rimborso di mercato",
   "market_removal": "Rimozione dal mercato",
   "marketplace": "Mercato",
@@ -683,6 +686,7 @@
   "previous_block_hash": "L'hash del blocco precedente",
   "previous_page": "Pagina precedente",
   "price": "Prezzo",
+  "price_chart_7d": "Grafico dei prezzi 7 giorni",
   "priority_fee": "Priorità",
   "private_feedback": "Private Feedback",
   "processors": "Processori",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Dettagli sulla transazione non processata",
   "recent_blocks": "Blocchi recenti",
   "recent_transactions": "Transazioni recenti",
+  "recent_transactions_since": "Transazioni recenti da",
   "recipient": "Destinatario",
   "recipient_account": "Account del destinatario",
   "recipient_alias_suggestion": "Se desideri digitare un alias, anteponi il carattere @.",
@@ -931,6 +936,7 @@
   "version": "Versione",
   "view_more": "Vedi di più",
   "view_owner_info_q": "Mostra informazioni del proprietario?",
+  "volume_24h": "Volume 24h",
   "vote": "Vota",
   "vote_casting": "Votazione",
   "vote_x": "Vota __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Con BURST",
   "x_confirmations": "__x__ conferme",
   "yes": "Sì",
+  "yesterdays_change": "Il cambiamento di ieri",
   "you": "Tu",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
