--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "自動的に生成されたパスフレーズは次の通りです:",
   "available_balance": "利用可能な残高",
   "available_for_transfer": "転送に__qty__が利用可能",
+  "available_supply": "利用できる供給",
   "avg_amount_per_block": "ブロックあたりの平均料金",
   "avg_fee_per_block": "ブロックあたりの平均料金",
   "back": "バック",
@@ -517,6 +518,7 @@
   "logout": "ログアウト",
   "logout_stop_forging": "ログアウトおよび鋳造停止",
   "lowest_ask": "最安額",
+  "market_capitalization": "時価総額",
   "market_delivery": "商品の配達",
   "market_feedback": "マーケットのフィードバック",
   "market_info": "市場情報",
@@ -524,6 +526,7 @@
   "market_price_change": "市場価格の変更",
   "market_purchase": "市場買付",
   "market_quantity_change": "マーケットの数量の変更",
+  "market_rank": "マーケットランク",
   "market_refund": "マーケットからの払い戻し",
   "market_removal": "マーケットからの削除",
   "marketplace": "マーケットプレース",
@@ -683,6 +686,7 @@
   "previous_block_hash": "前のブロックハッシュ",
   "previous_page": "前のページ",
   "price": "価格",
+  "price_chart_7d": "価格チャート7日",
   "priority_fee": "優先度",
   "private_feedback": "プライベートフィードバック",
   "processors": "プロセッサ",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "未処理トランザクションの詳細",
   "recent_blocks": "最近のブロック",
   "recent_transactions": "最近の取引",
+  "recent_transactions_since": "最近の取引以降",
   "recipient": "受信者",
   "recipient_account": "受信者のアカウント",
   "recipient_alias_suggestion": "エイリアスを入力する場合は、先頭に@ 文字を付けてください。",
@@ -931,6 +936,7 @@
   "version": "バージョン",
   "view_more": "もっと見る",
   "view_owner_info_q": "所有者の情報を表示しますか？",
+  "volume_24h": "ボリューム24時間",
   "vote": "投票",
   "vote_casting": "投票",
   "vote_x": "__x__に投票",
@@ -943,6 +949,7 @@
   "with_burst": "BURSTと",
   "x_confirmations": "__x__ 確認",
   "yes": "はい",
+  "yesterdays_change": "昨日の変更",
   "you": "あなた",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
