--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Jūsų automatiškai sugeneruotas prieigos slaptažodis:",
   "available_balance": "Galimas balansas",
   "available_for_transfer": "__qty__ galima pervesti",
+  "available_supply": "Galimas tiekimas",
   "avg_amount_per_block": "Vid. suma bloke",
   "avg_fee_per_block": "Vid. mokesčio suma bloke",
   "back": "Atgal",
@@ -517,6 +518,7 @@
   "logout": "Atsijungti",
   "logout_stop_forging": "Išsiregistruoti ir stabdyti \"kalimą",
   "lowest_ask": "Mažiausia prašoma kaina",
+  "market_capitalization": "Rinkos kapitalizacija",
   "market_delivery": "Pristatymas",
   "market_feedback": "Rinkos atsiliepimas",
   "market_info": "Rinkos informacija",
@@ -524,6 +526,7 @@
   "market_price_change": "Rinkos kainos pokytis",
   "market_purchase": "Pirkimas",
   "market_quantity_change": "Kiekio pasikeitimas",
+  "market_rank": "Rinkos reitingas",
   "market_refund": "Rinkos grąžinamosios išmokos",
   "market_removal": "Rinkos pašalinimas",
   "marketplace": "Parduotuvė",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Ankstesnio bloko \"hash",
   "previous_page": "Ankstesnis puslapis",
   "price": "Kaina",
+  "price_chart_7d": "Kainų diagrama 7 dienos",
   "priority_fee": "Prioritetas",
   "private_feedback": "Privatus atsiliepimas",
   "processors": "Procesoriai",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Transakcijos išsami informacija",
   "recent_blocks": "Paskutiniai blokai",
   "recent_transactions": "Paskutinės transakcijos",
+  "recent_transactions_since": "Naujausi sandoriai nuo",
   "recipient": "Gavėjas",
   "recipient_account": "Gavėjo sąskaita",
   "recipient_alias_suggestion": "Jei norite įvesti pseudinimą, pridėkite jį prie @ simbolio.",
@@ -931,6 +936,7 @@
   "version": "Versija",
   "view_more": "Rodyti daugiau",
   "view_owner_info_q": "Rodyti savininko info?",
+  "volume_24h": "Tomas 24 val",
   "vote": "Balsas",
   "vote_casting": "Balso padavimas",
   "vote_x": "balsavimas __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Su BURST",
   "x_confirmations": "__x__ patvirtinimai",
   "yes": "Taip",
+  "yesterdays_change": "Vakarinis pokytis",
   "you": "Jūs",
   "you_received_assets": "Jūs gavote <a href='#' data-goto-asset='__asset__'> 1 __name__ aktyvą</a>.",
   "you_received_assets_plural": "Jūs gavote <a href='#' data-goto-asset='__asset__'> __count__ __name__ aktyvus</a>.",
