--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Uw automatisch gegenereerde wachtwoord is:",
   "available_balance": "Beschikbare Balans",
   "available_for_transfer": "__qty__ beschikbaar voor overdracht",
+  "available_supply": "Beschikbaar aanbod",
   "avg_amount_per_block": "Gem. bedrag per blok",
   "avg_fee_per_block": "Gemiddelde vergoeding Per blok",
   "back": "Terug",
@@ -517,6 +518,7 @@
   "logout": "Log Uit",
   "logout_stop_forging": "Uitloggen en stoppen met Blokken genereren",
   "lowest_ask": "Laagste vraag",
+  "market_capitalization": "Marktkapitalisatie",
   "market_delivery": "Markt levering",
   "market_feedback": "Marktplaats Feedback",
   "market_info": "Marktinformatie",
@@ -524,6 +526,7 @@
   "market_price_change": "Prijsverandering van de markt",
   "market_purchase": "Markt aankoop",
   "market_quantity_change": "Markt hoeveelheid verandering",
+  "market_rank": "Marktpositie",
   "market_refund": "Marktplaats terugbetaling",
   "market_removal": "Marktplaats Verwijdering",
   "marketplace": "Marktplaats",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash van vorige blok",
   "previous_page": "Vorige Pagina",
   "price": "Prijs",
+  "price_chart_7d": "Prijskaart 7 dagen",
   "priority_fee": "Prioriteit",
   "private_feedback": "Prive feedback",
   "processors": "Processors",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Ruwe transactiedetails",
   "recent_blocks": "Recente blokken",
   "recent_transactions": "Recente Transacties",
+  "recent_transactions_since": "Recente transacties sinds",
   "recipient": "Ontvanger",
   "recipient_account": "Ontvangend Rekening",
   "recipient_alias_suggestion": "Als je een Alias wilt intypen begin dan door eerst een \"@\" teken in te voeren.",
@@ -931,6 +936,7 @@
   "version": "Versie",
   "view_more": "Bekijk Meer",
   "view_owner_info_q": "Gegevens van de eigenaar weergeven?",
+  "volume_24h": "Volume 24h",
   "vote": "Stemmen",
   "vote_casting": "Stem uitbrengen",
   "vote_x": "stem op __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Met BURST",
   "x_confirmations": "__x__ bevestigingen",
   "yes": "Ja",
+  "yesterdays_change": "Yesterday's Change",
   "you": "U",
   "you_received_assets": "Je hebt <a href='#' data-goto-asset='__asset__'> 1 __name__ asset</a> ontvangen.",
   "you_received_assets_plural": "Je hebt <a href='#' data-goto-asset='__asset__'> __count__ __name__ assets</a> ontvangen.",
