--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Twoje automatycznie wygenerowane hasło:",
   "available_balance": "Dostępny blans",
   "available_for_transfer": "__qty__ dostępna do transferu",
+  "available_supply": "Dostępne dostawy",
   "avg_amount_per_block": "Średnia ilość na blok",
   "avg_fee_per_block": "Średni koszt na blok",
   "back": "Z powrotem",
@@ -526,6 +527,7 @@
   "logout": "Wylogowanie",
   "logout_stop_forging": "Wyloguj i zakończ forging",
   "lowest_ask": "Najniższa oferta sprzedaży",
+  "market_capitalization": "Kapitalizacja rynku",
   "market_delivery": "Dostawa",
   "market_feedback": "Informacja zwrotna",
   "market_info": "Informacje rynkowe",
@@ -533,6 +535,7 @@
   "market_price_change": "Zmień cenę",
   "market_purchase": "Kup",
   "market_quantity_change": "Zmień ilość",
+  "market_rank": "Ranga rynkowa",
   "market_refund": "Zwrot",
   "market_removal": "Usunięcie",
   "marketplace": "Rynek",
@@ -692,6 +695,7 @@
   "previous_block_hash": "Hash poprzedniego bloku",
   "previous_page": "Poprzednia strona",
   "price": "Cena",
+  "price_chart_7d": "Tabela cen 7 dni",
   "priority_fee": "Priorytet",
   "private_feedback": "Prywatna informacja zwrotna",
   "processors": "Processors",
@@ -717,6 +721,7 @@
   "raw_transaction_details": "Nieobrobione dane transakcji",
   "recent_blocks": "Ostatnie bloki",
   "recent_transactions": "Ostatnie transakcje",
+  "recent_transactions_since": "Ostatnie transakcje od",
   "recipient": "Odbiorca",
   "recipient_account": "Konto odbiorcy",
   "recipient_alias_suggestion": "Alias musi być poprzedzony znakiem @.",
@@ -941,6 +946,7 @@
   "version": "Wersja",
   "view_more": "Zobacz więcej",
   "view_owner_info_q": "Otworzyć informacje o właścicielu?",
+  "volume_24h": "Objętość 24h",
   "vote": "Głos",
   "vote_casting": "Głosowanie",
   "vote_x": "głos __x__",
@@ -953,6 +959,7 @@
   "with_burst": "Z BURST",
   "x_confirmations": "__x__ potwierdzeń",
   "yes": "Tak",
+  "yesterdays_change": "Wczorajsza zmiana",
   "you": "Ty",
   "you_received_assets": "Otrezymałeś <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "Otrzymałeś <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
