--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "A sua senha gerada automaticamente é: ",
   "available_balance": "Saldo Disponível",
   "available_for_transfer": "__qty__ disponível para transferência",
+  "available_supply": "Fornecimento disponível",
   "avg_amount_per_block": "Qtde. Média Por Bloco",
   "avg_fee_per_block": "Taxa Média Por Bloco",
   "back": "De volta",
@@ -517,6 +518,7 @@
   "logout": "Sair",
   "logout_stop_forging": "Sair e parar o forjamento",
   "lowest_ask": "Pedido mais baixo",
+  "market_capitalization": "Capitalização de mercado",
   "market_delivery": "Entrega do mercado",
   "market_feedback": "Feedback do mercado",
   "market_info": "Informação de Mercado",
@@ -524,6 +526,7 @@
   "market_price_change": "Variação de preço do mercado",
   "market_purchase": "Compra de mercado",
   "market_quantity_change": "Mudança de quantidade de mercado",
+  "market_rank": "Rank do mercado",
   "market_refund": "Reembolso de mercado",
   "market_removal": "Remoção do mercado",
   "marketplace": "Mercado",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash de bloco anterior",
   "previous_page": "Página Anterior",
   "price": "Price",
+  "price_chart_7d": "Tabela de preços 7 dias",
   "priority_fee": "Prioridade",
   "private_feedback": "Feedback privado",
   "processors": "Processadores",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Detalhes da transação não processada",
   "recent_blocks": "Blocos recentes",
   "recent_transactions": "Transações recentes",
+  "recent_transactions_since": "Transações recentes desde",
   "recipient": "Beneficiário",
   "recipient_account": "Conta de destino",
   "recipient_alias_suggestion": "Se você quiser digitar um pseudônimo, prefixe-o com o caractere @.",
@@ -931,6 +936,7 @@
   "version": "Versão",
   "view_more": "Ver mais",
   "view_owner_info_q": "Exibir informações do proprietário?",
+  "volume_24h": "Volume 24h",
   "vote": "Votar",
   "vote_casting": "Votação",
   "vote_x": "votar __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Com burst",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
+  "yesterdays_change": "Mudança de ontem",
   "you": "Você",
   "you_received_assets": "Você recebeu 1 ativo __name__.",
   "you_received_assets_plural": "Você recebeu __count__ ativos __name__.",
