--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "A sua senha gerada automaticamente é:",
   "available_balance": "Saldo Disponível",
   "available_for_transfer": "__qty__ disponível para transferência",
+  "available_supply": "Fornecimento disponível",
   "avg_amount_per_block": "Quantidade Média por Bloco",
   "avg_fee_per_block": "Taxa Média por Bloco",
   "back": "De volta",
@@ -517,6 +518,7 @@
   "logout": "Sair",
   "logout_stop_forging": "Fechar Sessão e Deter o Forjamento",
   "lowest_ask": "Procura Mais Baixa",
+  "market_capitalization": "Capitalização de mercado",
   "market_delivery": "Entrega de Mercado",
   "market_feedback": "Valorações do Mercado",
   "market_info": "Informação de Mercado",
@@ -524,6 +526,7 @@
   "market_price_change": "Variação no Preço de Mercado",
   "market_purchase": "Compra de Mercado",
   "market_quantity_change": "Mudança de Quant. em Mercado",
+  "market_rank": "Rank do mercado",
   "market_refund": "Reembolso do Mercado",
   "market_removal": "Retirar dol Mercado",
   "marketplace": "Mercado",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash do Bloco Anterior",
   "previous_page": "Página Anterior",
   "price": "Preço",
+  "price_chart_7d": "Tabela de preços 7 dias",
   "priority_fee": "Prioridade",
   "private_feedback": "Valorações Privadas",
   "processors": "Processadores",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Dados sem processar da Transação",
   "recent_blocks": "Blocos Recentes",
   "recent_transactions": "Transações recentes",
+  "recent_transactions_since": "Transações recentes desde",
   "recipient": "Destinatário",
   "recipient_account": "Conta de Destino",
   "recipient_alias_suggestion": "Se você quiser digitar um alias, coloque @ na frente.",
@@ -931,6 +936,7 @@
   "version": "Versão",
   "view_more": "Ver Mais",
   "view_owner_info_q": "Ver informação do proprietário?",
+  "volume_24h": "Volume 24h",
   "vote": "Votar",
   "vote_casting": "Emissão de Votos",
   "vote_x": "votar __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Com BURST",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
+  "yesterdays_change": "Mudança de ontem",
   "you": "Você",
   "you_received_assets": "Você recebeu <a href='#' data-goto-asset='__asset__'> 1 __name__ ativos</a>.",
   "you_received_assets_plural": "Você recebeu <a href='#' data-goto-asset='__asset__'> __count__ __name__ ativos</a>.",
