--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Parola ta generată automat de către sistem este: ",
   "available_balance": "Sold Disponibil",
   "available_for_transfer": "__qty__ disponibilă pentru transfer",
+  "available_supply": "Ofertă disponibilă",
   "avg_amount_per_block": "Suma Medie Per Bloc",
   "avg_fee_per_block": "Taxă Medie Per Bloc",
   "back": "Înapoi",
@@ -517,6 +518,7 @@
   "logout": "Delogare",
   "logout_stop_forging": "Delogare şi oprire forjare",
   "lowest_ask": "Vânzarea mai ieftină",
+  "market_capitalization": "Capitalizare de piață",
   "market_delivery": "Livrare pe piață",
   "market_feedback": "Feedback-ul pieţii",
   "market_info": "Informații despre piață",
@@ -524,6 +526,7 @@
   "market_price_change": "Schimbările de Preţ pe Piaţă",
   "market_purchase": "Cumpărare din Piaţă",
   "market_quantity_change": "Schimbare de CANTIT pe Piaţă",
+  "market_rank": "Clasamentul pieței",
   "market_refund": "Ramburs Piață",
   "market_removal": "Retrage din Piaţă",
   "marketplace": "Marketplace",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash Bloc anterior",
   "previous_page": "Pagina Anterioară",
   "price": "Price",
+  "price_chart_7d": "Graficul prețurilor 7 zile",
   "priority_fee": "Prioritate",
   "private_feedback": "Feedback privat",
   "processors": "Procesoare",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Detalii tranzacție neprocesată",
   "recent_blocks": "Blocuri recente",
   "recent_transactions": "Tranzacţii recente",
+  "recent_transactions_since": "Tranzacții recente de la",
   "recipient": "Destinatar",
   "recipient_account": "Cont destinatar",
   "recipient_alias_suggestion": "Dacă dorești să introduci un alias, precedează-l cu caracterul @.",
@@ -931,6 +936,7 @@
   "version": "Versiune",
   "view_more": "Vezi mai multe",
   "view_owner_info_q": "Vrei să vezi informatii despre proprietar?",
+  "volume_24h": "Volumul 24h",
   "vote": "Votează",
   "vote_casting": "Votul e deschis",
   "vote_x": "votează __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Cu burst",
   "x_confirmations": "__x__ confirmări",
   "yes": "Da",
+  "yesterdays_change": "Schimbarea de ieri",
   "you": "Dvs",
   "you_received_assets": "Ai primit 1 __name__ activă.",
   "you_received_assets_plural": "Ai primit __count__ __name__ active.",
