--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Ваша, автоматически созданная, парольная фраза:",
   "available_balance": "Доступный баланс",
   "available_for_transfer": "__qty__ доступно для передачи",
+  "available_supply": "Доступная поставка",
   "avg_amount_per_block": "Средняя сумма за блок",
   "avg_fee_per_block": "Средняя комиссия за блок",
   "back": "назад",
@@ -517,6 +518,7 @@
   "logout": "Выход",
   "logout_stop_forging": "Выход с остановкой Форжинга",
   "lowest_ask": "Минимальная покупка",
+  "market_capitalization": "Рыночная капитализация",
   "market_delivery": "Доставка магазином",
   "market_feedback": "Обратная связь магазина",
   "market_info": "Информация о рынке",
@@ -524,6 +526,7 @@
   "market_price_change": "Изменение рыночной цены",
   "market_purchase": "Покупка по рынку",
   "market_quantity_change": "Изменение рыночного количества",
+  "market_rank": "Рейтинг рынка",
   "market_refund": "Возмещение магазином",
   "market_removal": "Исключить магазин",
   "marketplace": "Торговая площадка",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Хэш Предыдущего Блока",
   "previous_page": "Предыдущая страница",
   "price": "Цена",
+  "price_chart_7d": "Ценовой график 7 дней",
   "priority_fee": "приоритет",
   "private_feedback": "Приватный отзыв",
   "processors": "Процессоры",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Детали необработанной транзакции",
   "recent_blocks": "Последние блоки",
   "recent_transactions": "Последние Транзакции",
+  "recent_transactions_since": "Последние транзакции с",
   "recipient": "Получатель",
   "recipient_account": "Счет получателя",
   "recipient_alias_suggestion": "Если вы хотите ввести псевдоним, введите перед ним символ @.",
@@ -931,6 +936,7 @@
   "version": "Версия",
   "view_more": "Посмотреть больше",
   "view_owner_info_q": "Просмотреть информацию о владельце ?",
+  "volume_24h": "Том 24ч",
   "vote": "Голосование",
   "vote_casting": "Голосование",
   "vote_x": "голосов __x__",
@@ -943,6 +949,7 @@
   "with_burst": "С BURST",
   "x_confirmations": "__x__ подтверждений",
   "yes": "Да",
+  "yesterdays_change": "Вчерашние перемены",
   "you": "Вы",
   "you_received_assets": "Вы получили <a href='#' data-goto-asset='__asset__'> 1 __name__ активов</a>.",
   "you_received_assets_plural": "Вы получили <a href='#' data-goto-asset='__asset__'> __count__ __name__ активов</a>.",
