--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Vaše automaticky generované heslo je:",
   "available_balance": "Disponibilný zostatok",
   "available_for_transfer": "__qty__ dostupných pre prevod",
+  "available_supply": "Dostupná ponuka",
   "avg_amount_per_block": "Priemerná suma na blok",
   "avg_fee_per_block": "Priemerný poplatok za blok",
   "back": "späť",
@@ -517,6 +518,7 @@
   "logout": "Odhlásiť sa",
   "logout_stop_forging": "Odhlásiť sa a zastaviť kovanie",
   "lowest_ask": "Najnižší predaj",
+  "market_capitalization": "Kapitalizácia trhu",
   "market_delivery": "Doručenie trhoviska",
   "market_feedback": "Spätná väzba trhoviska",
   "market_info": "Informácie o trhu",
@@ -524,6 +526,7 @@
   "market_price_change": "Zmena trhovej ceny",
   "market_purchase": "Nákup na trhovisku",
   "market_quantity_change": "Zmena množstva na trhovisku",
+  "market_rank": "Pozícia na trhu",
   "market_refund": "Trhové vrátenie",
   "market_removal": "Odstránenie trhoviska",
   "marketplace": "Trhovisko",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash predchádzajúceho bloku",
   "previous_page": "Predchádzajúca strana",
   "price": "Cena",
+  "price_chart_7d": "Cenový graf 7 dní",
   "priority_fee": "priorita",
   "private_feedback": "Súkromné pripomienky",
   "processors": "Procesory",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Surové detaily transakcie",
   "recent_blocks": "Posledné bloky",
   "recent_transactions": "Nedávne transakcie",
+  "recent_transactions_since": "Nedávne transakcie odvtedy",
   "recipient": "Príjemca",
   "recipient_account": "Účet príjemcu",
   "recipient_alias_suggestion": "Ak chcete zadať alias, na začiatok aliasu pripojte znak @.",
@@ -931,6 +936,7 @@
   "version": "Verzia",
   "view_more": "Zobraziť viac",
   "view_owner_info_q": "Zobraziť informácie o vlastníkovi?",
+  "volume_24h": "Objem 24h",
   "vote": "Hlas",
   "vote_casting": "Zber hlasov",
   "vote_x": "hlas __x__",
@@ -943,6 +949,7 @@
   "with_burst": "S BURST",
   "x_confirmations": "__x__ potvrdení",
   "yes": "Áno",
+  "yesterdays_change": "Včerajšia zmena",
   "you": "Vy",
   "you_received_assets": "Prijali ste majetok <a href='#' data-goto-asset='__asset__'>1 __name__</a>.",
   "you_received_assets_plural": "Prijali ste majetok <a href='#' data-goto-asset='__asset__'>__count__ __name__</a>.",
