--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Ваша аутоматски генерисана лозинка је:",
   "available_balance": "Доступан Салдо",
   "available_for_transfer": "__qty__ доступно за трансфер",
+  "available_supply": "Аваилабле Суппли",
   "avg_amount_per_block": "Просечна Количина по Блоку",
   "avg_fee_per_block": "Просечна Провизија по Блоку",
   "back": "Назад",
@@ -517,6 +518,7 @@
   "logout": "Одјави се",
   "logout_stop_forging": "Одјава и Престанак Ковања",
   "lowest_ask": "Најнижа Продаја",
+  "market_capitalization": "Тржишна капитализација",
   "market_delivery": "Тржишна Достава",
   "market_feedback": "Повратна Порука са Тржишта",
   "market_info": "Информације о тржишту",
@@ -524,6 +526,7 @@
   "market_price_change": "Промена Тржишне Цене",
   "market_purchase": "Куповина на Тржишту",
   "market_quantity_change": "QТY Промена Тржишта",
+  "market_rank": "Маркет Ранк",
   "market_refund": "Поврат са Тржишта",
   "market_removal": "Премештај Тржишта",
   "marketplace": "Тржиште",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash Претходног Блока",
   "previous_page": "Претходна Страница",
   "price": "Цена",
+  "price_chart_7d": "Графикон цена 7 дана",
   "priority_fee": "Приоритет",
   "private_feedback": "Приватна повратна информација",
   "processors": "Процесори",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Детаљи Трансакције",
   "recent_blocks": "Пређашњи Блокови",
   "recent_transactions": "Последње Трансакције",
+  "recent_transactions_since": "Недавне трансакције од",
   "recipient": "Прималац",
   "recipient_account": "Налог Примаоца",
   "recipient_alias_suggestion": "Ако желите да куцате алиас, испред алиас-а куцајте @ карактер.",
@@ -931,6 +936,7 @@
   "version": "Верзија",
   "view_more": "Види више",
   "view_owner_info_q": "Погледајте информације власника?",
+  "volume_24h": "Волуме 24х",
   "vote": "Гласај",
   "vote_casting": "Прикупљање Гласова",
   "vote_x": "глас __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Са BURST-ом",
   "x_confirmations": "__x__ конфирмација",
   "yes": "Да",
+  "yesterdays_change": "Јучерашња промена",
   "you": "Ви",
   "you_received_assets": "Примили сте <a href='#' data-goto-asset='__asset__'>1 __name__ ассет-а</a>.",
   "you_received_assets_plural": "Примили сте <a href='#' data-goto-asset='__asset__'>__count__ __name__ ассет-а</a>.",
