--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Otomatik olarak oluşturulan şifreniz: ",
   "available_balance": "Kullanılabilir bakiye",
   "available_for_transfer": "Kullanılabilecek miktar: __qty__",
+  "available_supply": "Mevcut tedarik",
   "avg_amount_per_block": "Blok başına ortalama miktar",
   "avg_fee_per_block": "Ortalama blok  ücreti",
   "back": "Geri",
@@ -517,6 +518,7 @@
   "logout": "Çıkış yap",
   "logout_stop_forging": "Oturum kapatma ve  dövmeyi durdur",
   "lowest_ask": "En düşük teklif",
+  "market_capitalization": "Piyasa kapitalizasyonu",
   "market_delivery": "Market Delivery",
   "market_feedback": "Market Feedback",
   "market_info": "Piyasa Bilgisi",
@@ -524,6 +526,7 @@
   "market_price_change": "Piyasadaki Fiyat Değişikliği",
   "market_purchase": "Market Purchase",
   "market_quantity_change": "Market QTY Change",
+  "market_rank": "Piyasa sıralaması",
   "market_refund": "Market Refund",
   "market_removal": "Market Removal",
   "marketplace": "Pazar yeri",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Previous Block Hash",
   "previous_page": "Previous Page",
   "price": "Price",
+  "price_chart_7d": "Fiyat grafiği 7 gün",
   "priority_fee": "öncelik",
   "private_feedback": "Private Feedback",
   "processors": "İşlemciler",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Ham işlem ayrıntıları",
   "recent_blocks": "Son bloklar",
   "recent_transactions": "Son işlemler",
+  "recent_transactions_since": "O zamandan beri yapılan son işlemler",
   "recipient": "Alıcı",
   "recipient_account": "Alıcı hesabı",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
@@ -931,6 +936,7 @@
   "version": "Versiyon",
   "view_more": "View More",
   "view_owner_info_q": "View owner info?",
+  "volume_24h": "Cilt 24 saat",
   "vote": "Vote",
   "vote_casting": "Vote Casting",
   "vote_x": "vote __x__",
@@ -943,6 +949,7 @@
   "with_burst": "burst ile",
   "x_confirmations": "__x__ teyitleri",
   "yes": "Evet",
+  "yesterdays_change": "Dünün Değişimi",
   "you": "Siz",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
