--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Ваша, автоматично створена, парольна фраза:",
   "available_balance": "Доступний Баланс",
   "available_for_transfer": "__qty__ доступно для передачі",
+  "available_supply": "Доступні поставки",
   "avg_amount_per_block": "Середня Сума За Блок",
   "avg_fee_per_block": "Середня плата за блок",
   "back": "Назад",
@@ -517,6 +518,7 @@
   "logout": "Вихід із системи",
   "logout_stop_forging": "Вихід із Зупинкою Форжинга",
   "lowest_ask": "Мінімальна ціна продажу",
+  "market_capitalization": "Ринкова капіталізація",
   "market_delivery": "Доставка магазином",
   "market_feedback": "Зворотний зв'язок магазину",
   "market_info": "Інформація про ринок",
@@ -524,6 +526,7 @@
   "market_price_change": "Зміна ринкової ціни",
   "market_purchase": "Купівля по Ринку",
   "market_quantity_change": "Зміна ринкової кількості",
+  "market_rank": "Ринковий рейтинг",
   "market_refund": "Відшкодування магазином",
   "market_removal": "Виключити магазин",
   "marketplace": "Торговий майданчик",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Хэш Попереднього Блоку",
   "previous_page": "Попередня сторінка",
   "price": "Ціна",
+  "price_chart_7d": "Ціна діаграми 7 днів",
   "priority_fee": "Пріоритет",
   "private_feedback": "Приватний відгук",
   "processors": "Процесори",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "RAW деталі транзакції",
   "recent_blocks": "Останні блокі",
   "recent_transactions": "Останні Транзакції",
+  "recent_transactions_since": "Останні транзакції з",
   "recipient": "Одержувач",
   "recipient_account": "Акаунт одержувача",
   "recipient_alias_suggestion": "Якщо ви хочете ввести альяс, введіть перед ним символ @.",
@@ -931,6 +936,7 @@
   "version": "Версія",
   "view_more": "Подивитися більше",
   "view_owner_info_q": "Проглянути інформацію про власника ?",
+  "volume_24h": "Обсяг 24 год",
   "vote": "Голосування",
   "vote_casting": "Голосування",
   "vote_x": "голосів __x__",
@@ -943,6 +949,7 @@
   "with_burst": "З BURST",
   "x_confirmations": "__x__ підтверджень",
   "yes": "Так",
+  "yesterdays_change": "Вчорашня зміна",
   "you": "Ви",
   "you_received_assets": "Ви отримали <a href='#' data-goto-asset='__asset__'>1 __name__ активів</a>.",
   "you_received_assets_plural": "Ви отримали <a href='#' data-goto-asset='__asset__'>__count__ __name__ активів</a>.",
