--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "自动为您生成的密码是：",
   "available_balance": "可用余额",
   "available_for_transfer": "__qty__ 可供转移",
+  "available_supply": "可用供应",
   "avg_amount_per_block": "每个区块的平均数量",
   "avg_fee_per_block": "每个区块的平均费用",
   "back": "背部",
@@ -517,6 +518,7 @@
   "logout": "退出登录",
   "logout_stop_forging": "退出并停止锻造",
   "lowest_ask": "最低卖单",
+  "market_capitalization": "市场资本化",
   "market_delivery": "市场交付",
   "market_feedback": "市场反馈",
   "market_info": "市场信息",
@@ -524,6 +526,7 @@
   "market_price_change": "市场价格变化",
   "market_purchase": "市场购买",
   "market_quantity_change": "市场数量变化",
+  "market_rank": "市场排名",
   "market_refund": "市场退款",
   "market_removal": "市场移除",
   "marketplace": "市场",
@@ -683,6 +686,7 @@
   "previous_block_hash": "上一个区块哈希",
   "previous_page": "上一页",
   "price": "价格",
+  "price_chart_7d": "价格走势图7天",
   "priority_fee": "优先",
   "private_feedback": "私密的反馈",
   "processors": "处理器",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "原始交易详情",
   "recent_blocks": "最新的区块",
   "recent_transactions": "最近的交易",
+  "recent_transactions_since": "近期交易以来",
   "recipient": "接收者",
   "recipient_account": "接收者帐户",
   "recipient_alias_suggestion": "如果您想要输入一个别名，请以 @ 开头。",
@@ -931,6 +936,7 @@
   "version": "版本",
   "view_more": "查看更多",
   "view_owner_info_q": "查看所有者资料？",
+  "volume_24h": "第24h卷",
   "vote": "投票",
   "vote_casting": "投票",
   "vote_x": "投票 __x__",
@@ -943,6 +949,7 @@
   "with_burst": "与 BURST",
   "x_confirmations": "__x__ 确认",
   "yes": "是",
+  "yesterdays_change": "昨天的变化",
   "you": "您",
   "you_received_assets": "您收到 <a href='#' data-goto-asset='__asset__'> 1 __name__ 资产</a>。",
   "you_received_assets_plural": "您收到 <a href='#' data-goto-asset='__asset__'> __count__ __name__ 资产</a>。",
