--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "自動為您生成的密碼是:",
   "available_balance": "可用餘額",
   "available_for_transfer": "__qty__可供轉移",
+  "available_supply": "可用供应",
   "avg_amount_per_block": "每個區塊的平均數量",
   "avg_fee_per_block": "每個區塊的平均費用",
   "back": "背部",
@@ -517,6 +518,7 @@
   "logout": "退出登錄",
   "logout_stop_forging": "退出並停止鍛造",
   "lowest_ask": "最低賣單",
+  "market_capitalization": "市场资本化",
   "market_delivery": "市場交付",
   "market_feedback": "市場反饋",
   "market_info": "市场信息",
@@ -524,6 +526,7 @@
   "market_price_change": "市場價格變化",
   "market_purchase": "市場購買",
   "market_quantity_change": "市場數量變化",
+  "market_rank": "市场排名",
   "market_refund": "市場退款",
   "market_removal": "市場移除",
   "marketplace": "市場",
@@ -683,6 +686,7 @@
   "previous_block_hash": "上一個區塊哈希",
   "previous_page": "上一頁 ",
   "price": "價格",
+  "price_chart_7d": "价格走势图7天",
   "priority_fee": "优先",
   "private_feedback": "私密的反饋",
   "processors": "處理器",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "原始交易詳情",
   "recent_blocks": "最新的區塊",
   "recent_transactions": "最近的交易",
+  "recent_transactions_since": "近期交易以来",
   "recipient": "接收者",
   "recipient_account": "接收者帳戶",
   "recipient_alias_suggestion": "如果您想要輸入一個別名，請以@開頭。",
@@ -931,6 +936,7 @@
   "version": "版本",
   "view_more": "查看更多",
   "view_owner_info_q": "查看所有者資料？",
+  "volume_24h": "第24h卷",
   "vote": "投票",
   "vote_casting": "投票",
   "vote_x": "投票 __x__",
@@ -943,6 +949,7 @@
   "with_burst": "與 BURST",
   "x_confirmations": "__x__ 確認",
   "yes": "是",
+  "yesterdays_change": "昨天的变化",
   "you": "您",
   "you_received_assets": "您收到 <a href='#' data-goto-asset='__asset__'> 1 __name__ 資產</a>。",
   "you_received_assets_plural": "您收到 <a href='#' data-goto-asset='__asset__'> __count__ __name__ 資產</a>。",
