--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -82,6 +82,7 @@
   "automatically_generated_passphrase_is": "Vaša automatski generirana lozinka je: ",
   "available_balance": "Dostupan saldo",
   "available_for_transfer": "__qty__ rasploživo za transfer",
+  "available_supply": "Available Supply",
   "avg_amount_per_block": "Srednji iznos po bloku",
   "avg_fee_per_block": "Prosječna provizija po bloku",
   "back": "Nazad",
@@ -517,6 +518,7 @@
   "logout": "Odjava",
   "logout_stop_forging": "Odjava i prestanak kovanja",
   "lowest_ask": "Najniža prodaja",
+  "market_capitalization": "Kapitalizacija trzista",
   "market_delivery": "Tržišna dostava",
   "market_feedback": "Povratna poruka s tržišta",
   "market_info": "Informacije o tržištu",
@@ -524,6 +526,7 @@
   "market_price_change": "Promjena tržišne cijene",
   "market_purchase": "Kupovine na tržištu",
   "market_quantity_change": "Promjena dostupne količine na tržištu",
+  "market_rank": "Market Rank",
   "market_refund": "Povrat s tržišta",
   "market_removal": "Premještaj tržišta",
   "marketplace": "Tržište",
@@ -683,6 +686,7 @@
   "previous_block_hash": "Hash prethodnog bloka",
   "previous_page": "Prethodna stranica",
   "price": "Price",
+  "price_chart_7d": "Cijena karte 7 dana",
   "priority_fee": "Prioritet",
   "private_feedback": "Osobna povratna informacija",
   "processors": "Procesori",
@@ -708,6 +712,7 @@
   "raw_transaction_details": "Detalji transakcije",
   "recent_blocks": "Posljednji blokovi",
   "recent_transactions": "Posljednje transakcije",
+  "recent_transactions_since": "Nedavne transakcije od",
   "recipient": "Primatelj",
   "recipient_account": "Račun primalaca",
   "recipient_alias_suggestion": "Ako želite unijeti pseudonim ispred (pseudonima) koristite @ znak.",
@@ -931,6 +936,7 @@
   "version": "Inačica",
   "view_more": "Vidi više",
   "view_owner_info_q": "Pogledaj informacije o vlasniku?",
+  "volume_24h": "Volume 24h",
   "vote": "Glas",
   "vote_casting": "Prikupljanje glasova",
   "vote_x": "glas __x__",
@@ -943,6 +949,7 @@
   "with_burst": "Sa burst",
   "x_confirmations": "__x__ potvrda",
   "yes": "Da",
+  "yesterdays_change": "Jučerašnja promena",
   "you": "Vi",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
